<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context="age.app.gaurav.com.ageapplication.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adView"
        android:orientation="vertical"
        android:weightSum="4">

        <android.support.v7.widget.CardView
            android:id="@+id/cardview_age"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:elevation="100dp"
            card_view:cardBackgroundColor="@color/cardview_background_one"
            card_view:cardCornerRadius="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            >

            <ImageView
                android:id="@+id/image_cardview_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher_round"
                />

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/age_calculator"
                android:textColor="#fff"
                android:textSize="18sp"
                />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_date_interval"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:elevation="100dp"
            card_view:cardBackgroundColor="@color/cardview_background_two"
            card_view:cardCornerRadius="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            >

            <ImageView
                android:id="@+id/image_cardview_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher_round"
                />

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/date_interval_calculator"
                android:textColor="#fff"
                android:textSize="18sp"
                />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_countdown"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:elevation="100dp"
            card_view:cardBackgroundColor="@color/cardview_background_three"
            card_view:cardCornerRadius="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            >

            <ImageView
                android:id="@+id/image_cardview_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher_round"
                />

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/date_countdown"
                android:textColor="#fff"
                android:textSize="18sp"
                />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_date_info"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:elevation="100dp"
            card_view:cardBackgroundColor="@color/cardview_background_four"
            card_view:cardCornerRadius="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            >

            <ImageView
                android:id="@+id/image_cardview_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher_round"
                />

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/date_information"
                android:textColor="#fff"
                android:textSize="18sp"
                />

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <!-- view for AdMob Banner Ad -->
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />

</RelativeLayout>
