<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context="age.app.gaurav.com.ageapplication.ResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adView"
        android:orientation="vertical"
        android:weightSum="4">

        <android.support.v7.widget.CardView
            android:id="@+id/cardview_one"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:elevation="100dp"
            card_view:cardBackgroundColor="@color/light_grey"
            card_view:cardCornerRadius="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_margin="3dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="2">

            <TextView
                android:id="@+id/header_age"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.2"
                android:layout_margin="2dp"
                android:text="@string/age"
                android:textColor="#fff"
                android:textSize="18sp"
                android:gravity="center"/>

            <TextView
                android:gravity="center"
                android:id="@+id/tv_age"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".8"
                android:weightSum="1"
                android:textSize="18sp">

            </TextView>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardview_two"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:elevation="100dp"
            card_view:cardBackgroundColor="@color/light_grey"
            card_view:cardCornerRadius="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_margin="3dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="8.2">

                <TextView
                    android:background="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.2"
                    android:layout_margin="2dp"
                    android:text="@string/extras"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:gravity="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:weightSum="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight=".5"
                        android:layout_height="match_parent"
                        android:text="Total Years"
                        android:gravity="center|right"
                        android:textSize="18sp"
                        android:layout_margin="5sp"/>

                    <TextView
                        android:id="@+id/total_years"
                        android:layout_width="0dp"
                        android:layout_weight=".5"
                        android:layout_height="match_parent"
                        android:text="0"
                        android:gravity="center|left"
                        android:textSize="18sp"
                        android:layout_margin="5sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:weightSum="1"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight=".5"
                        android:layout_height="match_parent"
                        android:text="Total Months"
                        android:gravity="center|right"
                        android:textSize="18sp"
                        android:layout_margin="5sp"/>

                    <TextView
                        android:id="@+id/total_months"
                        android:layout_width="0dp"
                        android:layout_weight=".5"
                        android:layout_height="match_parent"
                        android:text="0"
                        android:gravity="center|left"
                        android:textSize="18sp"
                        android:layout_margin="5sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:weightSum="1"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight=".5"
                        android:layout_height="match_parent"
                        android:text="Total Weeks"
                        android:gravity="center|right"
                        android:textSize="18sp"
                        android:layout_margin="5sp"/>

                    <TextView
                        android:id="@+id/total_weeks"
                        android:layout_width="0dp"
                        android:layout_weight=".5"
                        android:layout_height="match_parent"
                        android:text="0"
                        android:gravity="center|left"
                        android:textSize="18sp"
                        android:layout_margin="5sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:weightSum="1"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight=".5"
                        android:layout_height="match_parent"
                        android:text="Total Days"
                        android:gravity="center|right"
                        android:textSize="18sp"
                        android:layout_margin="5sp"/>

                    <TextView
                        android:id="@+id/total_days"
                        android:layout_width="0dp"
                        android:layout_weight=".5"
                        android:layout_height="match_parent"
                        android:text="0"
                        android:gravity="center|left"
                        android:textSize="18sp"
                        android:layout_margin="5sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:weightSum="1"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight=".5"
                        android:layout_height="match_parent"
                        android:text="Total Hours"
                        android:gravity="center|right"
                        android:textSize="18sp"
                        android:layout_margin="5sp"/>

                    <TextView
                        android:id="@+id/total_hours"
                        android:layout_width="0dp"
                        android:layout_weight=".5"
                        android:layout_height="match_parent"
                        android:text="0"
                        android:gravity="center|left"
                        android:textSize="18sp"
                        android:layout_margin="5sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:weightSum="1"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight=".5"
                        android:layout_height="match_parent"
                        android:text="Total Minutes"
                        android:gravity="center|right"
                        android:textSize="18sp"
                        android:layout_margin="5sp"/>

                    <TextView
                        android:id="@+id/total_minutes"
                        android:layout_width="0dp"
                        android:layout_weight=".5"
                        android:layout_height="match_parent"
                        android:text="0"
                        android:gravity="center|left"
                        android:textSize="18sp"
                        android:layout_margin="5sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:weightSum="1"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight=".5"
                        android:layout_height="match_parent"
                        android:text="Total Seconds"
                        android:gravity="center|right"
                        android:textSize="18sp"
                        android:layout_margin="5sp"/>

                    <TextView
                        android:id="@+id/total_seconds"
                        android:layout_width="0dp"
                        android:layout_weight=".5"
                        android:layout_height="match_parent"
                        android:text="0"
                        android:gravity="center|left"
                        android:textSize="18sp"
                        android:layout_margin="5sp"/>
                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <!-- view for AdMob Banner Ad -->
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />

</RelativeLayout>
